--- a/src/components/Button/inquiryButton/InquiryButton.module.scss
+++ b/src/components/Button/inquiryButton/InquiryButton.module.scss
@@ -1,11 +1,11 @@
 @use '../../../../styles/common' as *;
 
 .inquiryBtn {
-    background-color: $orange;
+    background-color: $red;
     padding: 16px 64px 12px;
     border: none;
     border-radius: 5px;
-    box-shadow: 10px -8px 0 0 rgba(149, 72, 1, 1);
+    box-shadow: 10px -8px 0 0 $red-shadow;
     color: $white;
     font-size: 28px;
     font-weight: 600;
@@ -25,7 +25,6 @@
         border-bottom: solid 3px $white;
         transform: rotate(-45deg);
         margin: 0 0 2px 32px;
-        background-color: $orange;
         @include mq (440px) {
             width: 12px;
             height: 12px;
