--- a/src/components/mainSection/costSection/CostSection.module.scss
+++ b/src/components/mainSection/costSection/CostSection.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: $orange;
+    color: $black;
     font-size: 24px;
     font-weight: 500;
     background-color: transparent;
@@ -33,7 +33,7 @@
         background-color: transparent;
         @include mq (800px) {
             font-size: 32px;
-            margin-top: 16px;
+            margin-top: 8px;
             padding-top: 16px;
             margin-left: 48px;
         }
@@ -47,10 +47,10 @@
         justify-content: center;
         align-items: center;
         background-color: transparent;
-        .prPointStrongBlack {
+        .prPointStrongOrange {
             font-size: 28px;
-            font-weight: 600;
-            color: $black;
+            font-weight: 700;
+            color: $orange;
             margin-bottom: 8px;
             background-color: transparent;
             @include mq (800px) {
@@ -60,14 +60,15 @@
                 font-size: 28px;
             }
         }
-        .prPointStrongOrange {
+        .prPointStrongRed {
             font-size: 32px;
             font-weight: 600;
             color: $white;
-            background-color: $orange;
+            background-color: $red;
             padding: 16px 24px;
             border-radius: 5px;
             letter-spacing: .1em;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, .25);
             @include mq (800px) {
                 font-size: 36px;
             }
@@ -83,13 +84,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: $orange;
+    color: $black;
     font-size: 24px;
     font-weight: 500;
+    @include mq (820px) {
+        margin-top: 8px;
+    }
     @include mq (660px) {
         flex-direction: column;
         gap: 16px;
-        margin-top: 24px;
     }
     @include mq (400px){
         margin-top: 8px;
@@ -110,8 +113,9 @@
         }
     }
     .prSubPointStrong {
-        font-weight: 600;
+        font-weight: 700;
         margin-right: 8px;
+        color: $orange;
         @include mq (800px) {
             font-size: 28px;
         }
@@ -129,9 +133,35 @@
     display: flex;
     gap: 64px;
     align-items: center;
-    .costImg {
-        @include mq (900px) {
-            display: none;
+    .cardSectionCont {
+        width: 75%;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        .cardPointList {
+            list-style: none;
+            color: $blue;
+            font-size: 18px;
+            font-weight: 600;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            background-color: $cream;
+            padding: 16px;
+            border-radius: 5px;
+            box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
+            .cardPointItem {
+                display: flex;
+                gap: 8px;
+                .pointIcon {
+                    margin-top: 6px;
+                }
+            }
+        }
+        .costImg {
+            @include mq (900px) {
+                display: none;
+            }
         }
     }
 }
