--- a/src/components/mainSection/costSection/costCard/CostCard.module.scss
+++ b/src/components/mainSection/costSection/costCard/CostCard.module.scss
@@ -20,6 +20,7 @@
         gap: 32px;
         border-radius: 5px;
         opacity: 0;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, .25);
         @include mq (600px) {
             flex-direction: column;
             justify-content: center;
@@ -44,15 +45,15 @@
                 background-color: $blue;
             }
             .cardPoint {
-                font-size: 20px;
-                font-weight: 600;
+                font-size: 24px;
+                font-weight: 700;
                 letter-spacing: 0.05em;
                 background-color: $blue;
+                color: $yellow;
             }
         }
         .cardLine {
             width: 1px;
-            height: 120px;
             background-color: $white;
             @include mq (600px) {
                 width: 100%;
@@ -64,7 +65,6 @@
             width: 65%;
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
             background-color: $blue;
             @include mq (600px) {
@@ -76,6 +76,7 @@
                 font-weight: 300;
                 text-align: justify;
                 background-color: $blue;
+                line-height: 1.8;
             }
         }
     }
