--- a/src/components/mainSection/datavoiceSection/graphCard/GraphCard.module.scss
+++ b/src/components/mainSection/datavoiceSection/graphCard/GraphCard.module.scss
@@ -2,54 +2,46 @@
 
 .graphCont {
     list-style: none;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    background-color: $blue;
+    border-radius: 5px;
+    padding: 32px 0;
+    box-shadow: 10px -8px 0 0 $ornage-shadow;
     @include mq (900px) {
         flex-direction: column;
         align-items: center;
     }
     .graphList {
         display: flex;
-        flex-direction: column;
-        padding: 24px 32px;
+        padding: 24px 0 24px 32px;
         width: 48%;
+        gap: 32px;
         @include mq (900px) {
-            width: 80%;
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            padding: 24px 32px;
         }
         @include mq (500px) {
             width: 100%;
         }
-        .graphData {
-            background-color: $blue;
-            border-radius: 5px;
+        &:nth-child(3) {
+            padding: 24px 32px;
+        }
+        .graphListItem {
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 24px;
-            padding: 24px 32px;
-            margin-top: 16px;
-            min-height: 460px;
+        }
+        .graphLine {
+            width: 1px;
+            background-color: $white;
             @include mq (900px) {
-                justify-content: center;
-                margin: 16px auto;
-            }
-            @include mq (500px) {
-                width: 100%;
-            }
-            .graphImg {
-                background-color: $blue;
-            }
-            .graphLine {
                 width: 100%;
                 height: 1px;
                 background-color: $white;
-            }
-            .graphText {
-                color: $white;
-                font-size: 14px;
-                font-weight: 300;
-                text-align: justify;
-                background-color: $blue;
             }
         }
     }
