--- a/src/components/mainSection/datavoiceSection/voice/comment/personPicture/PersonPicture.module.scss
+++ b/src/components/mainSection/datavoiceSection/voice/comment/personPicture/PersonPicture.module.scss
@@ -5,7 +5,6 @@
     gap: 16px;
     justify-content: center; 
     align-items: center;
-    background-color: $cream;
     .picWrapper {
         background-color: $blue;
         border-radius: 50%;
@@ -14,6 +13,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        box-shadow: 4px 4px 4px rgba(0, 0, 0, .25);
     }
     .personPic {
         background-color: transparent;
