--- a/src/components/mainSection/pointSection/pointCard/PointCard.module.scss
+++ b/src/components/mainSection/pointSection/pointCard/PointCard.module.scss
@@ -6,6 +6,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 32px;
+    gap: 80px;
+    @include mq (500px) {
+        gap: 64px;
+    }
 }
 
