--- a/src/components/mainSection/pointSection/pointCard/eachPointCard/EachPointCard.module.scss
+++ b/src/components/mainSection/pointSection/pointCard/eachPointCard/EachPointCard.module.scss
@@ -4,57 +4,80 @@
     background-color: $blue;
     color: $white;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
     padding: 40px;
     border-radius: 5px;
-    margin: 0 48px 24px;
+    margin: 0 48px;
     box-shadow: 10px -8px 0 0 rgba(149, 72, 1, 1);
     opacity: 0;
-    @include mq (740px) {
-        flex-direction: column;
-        align-items: center;
-        gap: 32px;
-        width: 90%;
+    @include mq (820px) {
+        width: 80%; 
     }
-    .pointImg {
-        @include mq (360px) {
-            width: 100%;
-            height: auto;
-        }
+    @include mq (540px) {
+        padding:  40px 0;
     }
-    .pointTextCont {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-left: 16px;
-        background-color: $blue;
-        @include mq (740px) {
-            margin-left: 0;
+    .pointTitle {
+        background-color: $orange;
+        border-radius: 5px;
+        padding: 8px 24px;
+        font-weight: 500;
+        font-size: 20px;
+        @include mq (500px) {
+            font-size: 16px;
         }
-        .pointTitle {
-            background-color: $orange;
-            border-radius: 5px;
-            padding: 8px 24px;
-            font-weight: 500;
-            margin: 0 0 32px 16px;
-            @include mq (740px) {
-                margin: 0 0 32px 0;
-            }
-            @include mq (340px) {
-                font-size: 14px;
-            }
-        }
-        .pointText {
+        @include mq (380px) {
             font-size: 14px;
-            font-weight: 300;
-            padding: 0 24px 0 40px;
-            text-align: justify;
-            background-color: $blue;
-            @include mq (800px) {
-                padding: 0 0 0 24px;
+        }
+    }
+    .pointListCont {
+        display: flex;
+        align-items: center;
+        padding: 0 24px;
+        gap: 16px;
+        @include mq (820px) {
+            flex-direction: column;
+            gap: 24px;
+        }
+        @include mq (360px) {
+            padding: 0 16px;
+        }
+        .pointImg {
+            border-radius: 5px;
+            border: solid 1px $cream;
+            box-shadow: 2px 4px 4px rgba(0, 0, 0, .25);
+            @include mq (400px) {
+                width: 90%;
+                height: auto;
             }
-            @include mq (740px) {
-                padding: 0;
+        }
+        .pointTextCont {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-left: 16px;
+            background-color: $blue;
+            @include mq (820px) {
+                margin-left: 0;
+                width: 70%;
+            }
+            @include mq (630px) {
+                width: 90%;
+            }
+            .pointText {
+                font-size: 14px;
+                font-weight: 300;
+                text-align: justify;
+                background-color: $blue;
+                line-height: 1.8;
+                @include mq (800px) {
+                    padding: 0 0 0 24px;
+                }
+                @include mq (740px) {
+                    padding: 0;
+                }
             }
         }
     }
