--- a/src/components/mainSection/topSection/topContents/TopContents.module.scss
+++ b/src/components/mainSection/topSection/topContents/TopContents.module.scss
@@ -7,7 +7,7 @@
         background-color: $cream;
         @include mq (960px) {
             display: flex;
-            flex-direction: column-reverse;
+            flex-direction: column;
         }
         .titleCont {
             padding-top: 24px;
@@ -24,12 +24,16 @@
                 @include mq (960px) {
                     text-align: center;
                     margin: 16px 0;
+                    font-size: 20px;
                 }
                 @include mq (550px) {
-                    font-size: 18px;
-                }
-                @include mq (380px) {
                     font-size: 16px;
+                }
+                @include mq (420px) {
+                    font-size: 14px;
+                }
+                @include mq (360px) {
+                    font-size: 12px;
                 }
             }
             .mainTitle {
@@ -42,11 +46,11 @@
                 @include mq (960px) {
                     width: 100%;
                     text-align: center;
-                    padding: 16px 48px;
-                    border-radius: none;
+                    padding: 4px 48px 0;
+                    border-radius: 0;
                 }
                 @include mq (500px) {
-                    padding: 8px 48px;
+                    padding: 0 48px;
                 }
                 .titleImg {
                     background-color: $blue;
@@ -66,84 +70,114 @@
     .topImgCont {
         background-color: $blue;
         display: flex;
-        align-items: center;
+        align-items: stretch;
         justify-content: flex-start;
         opacity: 0;
-        .topImg {
-            @include mq (960px) {
-                width: 100vw;
-                height: auto;
+        .topImgBox {
+            position: relative;
+            margin: 0;
+            .topImg {
+                display: block;
+                height: 100%;
+                @include mq (960px) {
+                    width: 100vw;
+                    height: auto;
+                }
+            }
+            .pointList {
+                list-style: none;
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                background-color: $white-80;
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+                padding: 16px 24px;
+                font-size: 18px;
+                border-top-left-radius: 5px;
+                @include mq (600px) {
+                    padding: 16px;
+                    font-size: 14px;
+                }
+                @include mq (400px) {
+                    padding: 8px 16px;
+                    font-size: 12px;
+                    gap: 8px;
+                }
+                .pointIcon {
+                    margin-top: 4px;
+                }
+                .pointItem {
+                    display: flex;
+                    align-items: center;
+                    color: $blue;
+                    font-weight: 600;
+                    gap: 8px;
+                }
             }
         }
     }
     .descriptionCont {
         padding: 32px 0 8px;
-        background-color: $cream;
         opacity: 0;
         @include mq (550px) {
-            padding: 8px 0 0;
+            padding: 32px 0 0;
         }
         .description {
-            color: $orange;
-            margin-left: 48px;
             display: flex;
-            align-items: center;
-            background-color: $cream;
-            @include mq (700px) {
-                display: flex;
-                flex-direction: column;
-                gap: 24px;
-                margin-left: 0;
-            }
-            .textStrongCont {
-                background-color: $cream;
-            }
-            .boxText {
-                background-color: $yellow;
-                color: $white;
-                font-size: 28px;
-                font-weight: 600;
+            align-items: baseline;
+            background-color: $blue;
+            padding: 8px 40px;
+            font-weight: 600;
+            max-width: 660px;
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+            @include mq (660px) {
+                border-radius: 0;
+                justify-content: center;
                 padding: 8px 16px;
-                border-radius: 5px;
-                letter-spacing: .1em;
-                @include mq (700px) {
-                    padding: 16px 24px;
-                    font-size: 32px;
-                    margin: 16px 0;
+            }
+            .textYellow {
+                font-size: 32px;
+                color: $yellow;
+                @include mq (660px) {
+                    font-size: 24px;
                 }
-                @include mq (550px) {
-                    padding: 8px 16px;
-                    font-size: 28px;
+                @include mq (500px) {
+                    font-size: 18px;
                 }
-                @include mq (380px) {
-                    padding: 8px 16px;
-                    font-size: 20px;
+                @include mq (370px) {
+                    font-size: 16px;
                 }
             }
-            .textNomalCont {
-                background-color: $cream;
-                @include mq (700px) {
-                    margin-top: 16px;
+            .textWhite {
+                font-size: 32px;
+                color: $white;
+                @include mq (660px) {
+                    font-size: 24px;
                 }
-                @include mq (550px) {
-                    margin-top: 0;
+                @include mq (500px) {
+                    font-size: 18px;
+                }
+                @include mq (370px) {
+                    font-size: 16px;
                 }
             }
             .textSmall {
-                font-size: 20px;
+                font-size: 24px;
                 font-weight: 600;
-                margin: 0 8px;
-                background-color: $cream;
-            }
-            .textNomal {
-                font-size: 28px;
-                font-weight: 700;
-                background-color: $cream;
-                @include mq (550px) {
-                    font-size: 24px;
+                margin: 0 4px;
+                color: $white;
+                @include mq (660px) {
+                    font-size: 18px;
                 }
-                @include mq (400px) {
-                    font-size: 20px;
+                @include mq (500px) {
+                    font-size: 14px;
+                }
+                @include mq (370px) {
+                    font-size: 12px;
+                    margin: 0 2px;
                 }
             }
         }
