--- a/src/components/parts/pointTitleParts/PointTitleParts.module.scss
+++ b/src/components/parts/pointTitleParts/PointTitleParts.module.scss
@@ -4,8 +4,9 @@
     background-color: $orange;
     padding: 8px 24px;
     color: $white;
-    font-weight: 500;
+    font-weight: 600;
     display: inline-block;
     border-radius: 50px;
     text-align: center;
+    letter-spacing: .1em;
 }
